--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -2,6 +2,17 @@
   "(and :count more error)": "(e mais :count erro)",
   "(and :count more errors)": "(e mais :count erros)",
   "Search": "Buscar",
+  "Update": "Atualizar",
+
+  "Brands": "Marcas",
+  "Edit Brand": "Editar Marca",
+  "Brand Not Deleted": "Marca Não Excluída",
+  "Brand Updated": "Marca Atualizada",
+  "Create New Brand": "Criar Nova Marca",
+  "Deleting Brand": "Deletando Marca",
+  "New Brand": "Nova Marca",
+  "Brand Created": "Marca Criada",
+  "Brand Deleted": "Marca Excluída",
   "Actions": "Ações",
   "People": "Pessoas",
   "people": "pessoas",
@@ -14,9 +25,6 @@
   "Date Birth": "Data de Nascimento",
   "Name Mother": "Nome da Mãe",
   "Description": "Descrição",
-  "City": "Cidade",
-  "City Not Deleted": "Cidade Não Excluída",
-  "City Updated": "Cidade Atualizada",
   "Group": "Grupo",
   "Edit": "Editar",
   "Photo": "Foto",
@@ -130,8 +138,6 @@
   "Create New Group": "Criar Novo Grupo",
   "Deleting Group": "Excluindo Grupo",
   "Edit Group": "Editando Grupo",
-  "City Created": "Cidade Criada",
-  "City Deleted": "Cidade Excluída",
   "Cities": "Cidades",
   "User Deleted": "Usuário Excluído",
   "Role Not Deleted": "Função Não Excluída",
@@ -208,10 +214,10 @@
   "user_read": "Ver Usuários",
   "user_update": "Atualizar Usuário",
   "user_delete": "Apagar Usuário",
-  "city_create": "Criar Cidade",
-  "city_read": "Ver Cidade",
-  "city_update": "Atualizar Cidade",
-  "city_delete": "Apagar Cidade",
+  "brand_create": "Criar Marca",
+  "brand_read": "Ver Marca",
+  "brand_update": "Atualizar Marca",
+  "brand_delete": "Apagar Marca",
   "people_create": "Criar Pessoa",
   "people_read": "Ver Pessoa",
   "people_update": "Atualizar Pessoa",
@@ -229,12 +235,8 @@
   "Edit user": "Editar usuário",
   "Create New Role": "Criar Nova Função",
   "Deleting Role": "Deletando Função",
-  "Edit City": "Editar Cidade",
   "Showing Person": "Mostrando Pessoa",
-  "Create New City": "Criar Nova Cidade",
-  "Deleting City": "Deletando Cidade",
   "New Role": "Nova Função",
-  "New City": "Nova Cidade",
   "Attention: If this role has skills, it is necessary to remove them before deleting, otherwise deletion will not be possible.": "Atenção: Caso está função tenha habilidades é necessário retira-los antes de deletar, caso não o faça não será possivel a exclusão",
   "New": "Novo",
   "Back": "Voltar"
