--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -13,6 +13,18 @@
   "New Brand": "Nova Marca",
   "Brand Created": "Marca Criada",
   "Brand Deleted": "Marca Excluída",
+
+  "Vehicle Models": "Modelos de Veículos",
+  "Vehicle Model": "Modelo de Veículos",
+  "Edit Vehicle Model": "Editar Modelo de Veículo",
+  "Vehicle Model Not Deleted": "Modelo de Veículo Não Excluído",
+  "Vehicle Model Updated": "Modelo de Veículo Atualizado",
+  "Create New Vehicle Model": "Criar Novo Modelo de Veículo",
+  "Deleting Vehicle Model": "Deletando Modelo de Veículo",
+  "New Vehicle Model": "Novo Modelo de Veículo",
+  "Vehicle Model Created": "Modelo de Veículo Criado",
+  "Vehicle Model Deleted": "Modelo de Veículo Excluído",
+
   "Actions": "Ações",
   "People": "Pessoas",
   "people": "pessoas",
