--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -25,6 +25,17 @@
   "Vehicle Model Created": "Modelo de Veículo Criado",
   "Vehicle Model Deleted": "Modelo de Veículo Excluído",
 
+  "Vehicle Types": "Tipos de Veículos",
+  "Vehicle Type": "Tipo de Veículo",
+  "Edit Vehicle Type": "Editar Tipo de Veículo",
+  "Vehicle Type Not Deleted": "Tipo de Veículo Não Excluído",
+  "Vehicle Type Updated": "Tipo de Veículo Atualizado",
+  "Create New Vehicle Type": "Criar Novo Tipo de Veículo",
+  "Deleting Vehicle Type": "Deletando Tipo de Veículo",
+  "New Vehicle Type": "Novo Tipo de Veículo",
+  "Vehicle Type Created": "Tipo de Veículo Criado",
+  "Vehicle Type Deleted": "Tipo de Veículo Excluído",
+
   "Actions": "Ações",
   "People": "Pessoas",
   "people": "pessoas",
