--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -41,6 +41,7 @@
   "people": "pessoas",
   "with": "com",
   "No Role": "Sem Função",
+  "No photo available": "Nenhuma foto disponível",
   "Create New Person": "Criar Nova Pessoa",
   "Person created successfully": "Pessoa criada com sucesso.",
   "Person updated successfully": "Pessoa editada com sucesso.",
