--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -36,6 +36,41 @@
   "Vehicle Type Created": "Tipo de Veículo Criado",
   "Vehicle Type Deleted": "Tipo de Veículo Excluído",
 
+  "Vehicle": "Veículo",
+  "Vehicles": "Veículos",
+  "Edit Vehicle": "Editar Veículo",
+  "Editing Vehicle": "Editando Veículo",
+  "Vehicle Not Deleted": "Veículo Não Excluído",
+  "Vehicle Updated": "Veículo Atualizado",
+  "Create New Vehicle": "Criar Novo Veículo",
+  "Deleting Vehicle": "Deletando Veículo",
+  "New Vehicle": "Novo Veículo",
+  "Vehicle Created": "Veículo Criado",
+  "Vehicle Deleted": "Veículo Excluído",
+  "Brand": "Marca",
+  "Year": "Ano",
+  "Plate": "Placa",
+  "Color": "Cor",
+  "Fuel": "Combustível",
+  "Chassis": "Chassi",
+  "Renavam": "Renavam",
+  "Owner": "Proprietário",
+  "Vehicle Photo": "Foto do Veículo",
+  "Vehicle Photos": "Fotos do Veículo",
+  "Add Photo": "Adicionar Foto",
+  "Photo Added": "Foto Adicionada",
+  "Photo Deleted": "Foto Excluída",
+  "Photo Not Deleted": "Foto Não Excluída",
+  "Photo Updated": "Foto Atualizada",
+  "Photo Not Updated": "Foto Não Atualizada",
+  "Photos": "Fotos",
+  "Purchase Date": "Data de Compra",
+  "Purchase Price": "Preço de Compra",
+  "Sale Price": "Preço de Venda",
+  "Type": "Tipo",
+  "Model": "Modelo",
+  "Showing Vehicle": "Mostrando Veículo",
+
   "Actions": "Ações",
   "People": "Pessoas",
   "people": "pessoas",
