--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -5,6 +5,7 @@
   "Update": "Atualizar",
 
   "Brands": "Marcas",
+  "brand": "Marca",
   "Edit Brand": "Editar Marca",
   "Brand Not Deleted": "Marca Não Excluída",
   "Brand Updated": "Marca Atualizada",
