--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -287,6 +287,20 @@
   "group_read": "Ver Grupo",
   "group_update": "Atualizar Grupo",
   "group_delete": "Apagar Grupo",
+  "vmodel_create": "Criar Modelo de Veículo",
+  "vmodel_read": "Ver Modelo de Veículo",
+  "vmodel_update": "Atualizar Modelo de Veículo",
+  "vmodel_delete": "Apagar Modelo de Veículo",
+  "vtype_create": "Criar Tipo de Veículo",
+  "vtype_read": "Ver Tipo de Veículo",
+  "vtype_update": "Atualizar Tipo de Veículo",
+  "vtype_delete": "Apagar Tipo de Veículo",
+  "vehicle_create": "Criar Veículo",
+  "vehicle_read": "Ver Veículo",
+  "vehicle_update": "Atualizar Veículo",
+  "vehicle_delete": "Apagar Veículo",
+  "vphoto_delete": "Apagar Foto do Veículo",
+
   "Edit Role": "Editar Função",
   "User Created": "Usuário Criado",
   "User Updated": "Usuário Atualizado",
