--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -72,6 +72,17 @@
   "Model": "Modelo",
   "Showing Vehicle": "Mostrando Veículo",
 
+  "Clients": "Clientes",
+  "Client": "Cliente",
+  "Edit Client": "Editar Cliente",
+  "Client Not Deleted": "Cliente Não Excluído",
+  "Client Updated": "Cliente Atualizado",
+  "Create New Client": "Criar Novo Cliente",
+  "Deleting Client": "Deletando Cliente",
+  "New Client": "Novo Cliente",
+  "Client Created": "Cliente Criado",
+  "Client Deleted": "Cliente Excluído",
+
   "Actions": "Ações",
   "People": "Pessoas",
   "people": "pessoas",
@@ -300,6 +311,11 @@
   "vehicle_update": "Atualizar Veículo",
   "vehicle_delete": "Apagar Veículo",
   "vphoto_delete": "Apagar Foto do Veículo",
+  "client_create": "Criar Cliente",
+  "client_read": "Ver Cliente",
+  "client_update": "Atualizar Cliente",
+  "client_delete": "Apagar Cliente",
+  "cphoto_delete": "Apagar Foto do Cliente",
 
   "Edit Role": "Editar Função",
   "User Created": "Usuário Criado",
