--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -130,6 +130,8 @@
   "Payment undone successfully": "Pagamento desfeito com sucesso",
   "Payment received successfully": "Pagamento recebido com sucesso",
   "Payment Installments": "Parcelas do Pagamento",
+  "Search plate": "Buscar placa",
+  "Search client": "Buscar cliente",
 
   "Actions": "Ações",
   "People": "Pessoas",
