--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -132,6 +132,7 @@
   "Payment Installments": "Parcelas do Pagamento",
   "Search plate": "Buscar placa",
   "Search client": "Buscar cliente",
+  "Vehicle created successfully": "Veículo criado com sucesso",
 
   "Actions": "Ações",
   "People": "Pessoas",
