--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -3,6 +3,8 @@
   "(and :count more errors)": "(e mais :count erros)",
   "Search": "Buscar",
   "Update": "Atualizar",
+  "About": "Sobre",
+  "Store": "Loja",
 
   "Brands": "Marcas",
   "brand": "Marca",
