--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -85,6 +85,36 @@
   "Client Created": "Cliente Criado",
   "Client Deleted": "Cliente Excluído",
 
+  "Showing Client": "Mostrando Cliente",
+  "Phone": "Telefone",
+  "Phone (1)": "Telefone (1)",
+  "Phone (2)": "Telefone (2)",
+  "Mother": "Mãe",
+  "Affiliated": "Afiliado",
+  "Affiliated (1)": "Afiliado (1)",
+  "Affiliated (2)": "Afiliado (2)",
+  "Country": "País",
+  "State": "Estado",
+  "City": "Cidade",
+  "Complement": "Complemento",
+  "Father": "Pai",
+  "Birth Date": "Data de Nascimento",
+  "Number": "Número",
+  "Update Client": "Atualizar Cliente",
+  "Edit City": "Editar Cidade",
+  "Create City": "Criar Cidade",
+  "Deleting City": "Deletando Cidade",
+  "City Created": "Cidade Criada",
+  "City Deleted": "Cidade Excluída",
+  "City Not Deleted": "Cidade Não Excluída",
+  "City Updated": "Cidade Atualizada",
+  "Create Client": "Criar Cliente",
+  "Client updated successfully": "Cliente atualizado com sucesso",
+  "Total Purchase Price": "Preço Total de Compra",
+  "Total Sale Price": "Preço Total de Venda",
+  "Total Profit": "Lucro Total",
+  "Stock": "Estoque",
+
   "Sales": "Vendas",
   "Sale": "Venda",
   "Edit Sale": "Editar Venda",
