--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -165,6 +165,8 @@
   "Search plate": "Buscar placa",
   "Search client": "Buscar cliente",
   "Vehicle created successfully": "Veículo criado com sucesso",
+  "Edit Company": "Editar Empresa",
+  "Contacts": "Contatos",
 
   "Actions": "Ações",
   "People": "Pessoas",
