--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -167,6 +167,18 @@
   "Vehicle created successfully": "Veículo criado com sucesso",
   "Edit Company": "Editar Empresa",
   "Contacts": "Contatos",
+  "Expenses": "Despesas",
+  "Expense": "Despesa",
+  "Edit Expense": "Editar Despesa",
+  "Expense Not Deleted": "Despesa Não Excluída",
+  "Expense Updated": "Despesa Atualizada",
+  "Create New Expense": "Criar Nova Despesa",
+  "Deleting Expense": "Deletando Despesa",
+  "New Expense": "Nova Despesa",
+  "Expense Created": "Despesa Criada",
+  "Expense Deleted": "Despesa Excluída",
+  "Company": "Empresa",
+  "Date": "Data",
 
   "Actions": "Ações",
   "People": "Pessoas",
