MM-8: dashboard add expenses

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -179,6 +179,9 @@
   "Expense Deleted": "Despesa Excluída",
   "Company": "Empresa",
   "Date": "Data",
+  "Total Expense": "Despesa Total",
+  "Sold": "Vendido",
+  "Unsold": "Não Vendido",
 
   "Actions": "Ações",
   "People": "Pessoas",
