--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -182,6 +182,7 @@
   "Total Expense": "Despesa Total",
   "Sold": "Vendido",
   "Unsold": "Não Vendido",
+  "Total Stock Value": "Valor Total do Estoque",
 
   "Actions": "Ações",
   "People": "Pessoas",
