--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -183,6 +183,12 @@
   "Sold": "Vendido",
   "Unsold": "Não Vendido",
   "Total Stock Value": "Valor Total do Estoque",
+  "Select a Model": "Selecione um Modelo",
+  "Create Vehicle": "Criar Veículo",
+  "Select a State": "Selecione um Estado",
+  "Reimbursement": "Reembolso",
+  "Cancelling Sale": "Cancelando Venda",
+  "Receive Payment": "Receber Pagamento",
 
   "Actions": "Ações",
   "People": "Pessoas",
