--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -189,6 +189,14 @@
   "Reimbursement": "Reembolso",
   "Cancelling Sale": "Cancelando Venda",
   "Receive Payment": "Receber Pagamento",
+  "Order": "Ordem",
+  "Growing": "Crescente",
+  "Descending": "Decrescente",
+  "Max Price": "Preço Máximo",
+  "Year Initial": "Ano Inicial",
+  "Year Final": "Ano Final",
+  "Filters": "Filtros",
+  "Price": "Preço",
 
   "Actions": "Ações",
   "People": "Pessoas",
