MM-23-fix-bug--1: translated

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -73,6 +73,7 @@
   "Type": "Tipo",
   "Model": "Modelo",
   "Showing Vehicle": "Mostrando Veículo",
+  "Brands and Types": "Marcas e Tipos",
 
   "Clients": "Clientes",
   "Client": "Cliente",
