--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -198,6 +198,7 @@
   "Year Final": "Ano Final",
   "Filters": "Filtros",
   "Price": "Preço",
+  "Company updated successfully!": "Empresa atualizada com sucesso!",
 
   "Actions": "Ações",
   "People": "Pessoas",
