--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -199,6 +199,7 @@
   "Filters": "Filtros",
   "Price": "Preço",
   "Company updated successfully!": "Empresa atualizada com sucesso!",
+  "Marital Status": "Estado Civil",
 
   "Actions": "Ações",
   "People": "Pessoas",
