--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -200,6 +200,8 @@
   "Price": "Preço",
   "Company updated successfully!": "Empresa atualizada com sucesso!",
   "Marital Status": "Estado Civil",
+  "CEO Marital Status": "CEO Estado Civil",
+  "CEO Address": "CEO Endereço",
 
   "Actions": "Ações",
   "People": "Pessoas",
