--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -203,6 +203,20 @@
   "CEO Marital Status": "CEO Estado Civil",
   "CEO Address": "CEO Endereço",
 
+  "Employees": "Funcionários",
+  "Employee": "Funcionário",
+  "Edit Employee": "Editar Funcionário",
+  "Employee Not Deleted": "Funcionário Não Excluído",
+  "Employee Updated": "Funcionário Atualizado",
+  "Create New Employee": "Criar Novo Funcionário",
+  "Deleting Employee": "Deletando Funcionário",
+  "New Employee": "Novo Funcionário",
+  "Employee Created": "Funcionário Criado",
+  "Employee Deleted": "Funcionário Excluído",
+  "Employee updated successfully": "Funcionário atualizado com sucesso",
+  "Employee created successfully": "Funcionário criado com sucesso",
+  "Employee deleted successfully": "Funcionário excluído com sucesso",
+
   "Actions": "Ações",
   "People": "Pessoas",
   "people": "pessoas",
