MM-29: show Employee finished

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -216,6 +216,8 @@
   "Employee updated successfully": "Funcionário atualizado com sucesso",
   "Employee created successfully": "Funcionário criado com sucesso",
   "Employee deleted successfully": "Funcionário excluído com sucesso",
+  "Salary": "Salário",
+  "Spouse": "Cônjuge",
 
   "Actions": "Ações",
   "People": "Pessoas",
