MM-29: add forelse in all tables, "record not found"

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -218,7 +218,9 @@
   "Employee deleted successfully": "Funcionário excluído com sucesso",
   "Salary": "Salário",
   "Spouse": "Cônjuge",
+  "Issue": "Emitir",
 
+  "No records found": "Nenhum registro encontrado",
   "Actions": "Ações",
   "People": "Pessoas",
   "people": "pessoas",
