MM-29: add validation login if user active.

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -219,6 +219,7 @@
   "Salary": "Salário",
   "Spouse": "Cônjuge",
   "Issue": "Emitir",
+  "Account desactive. Please contact the administrator.": "Conta desativada. Por favor, entre em contato com o administrador.",
 
   "No records found": "Nenhum registro encontrado",
   "Actions": "Ações",
