--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -221,6 +221,7 @@
   "Issue": "Emitir",
   "Account desactive. Please contact the administrator.": "Conta desativada. Por favor, entre em contato com o administrador.",
 
+  "Are you sure you want to disable this account?": "Tem certeza de que deseja desativar esta conta?",
   "No records found": "Nenhum registro encontrado",
   "Actions": "Ações",
   "People": "Pessoas",
