--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -222,6 +222,7 @@
   "Account desactive. Please contact the administrator.": "Conta desativada. Por favor, entre em contato com o administrador.",
 
   "Are you sure you want to disable this account?": "Tem certeza de que deseja desativar esta conta?",
+  "Are you sure you want to enable this account?": "Tem certeza de que deseja ativar esta conta?",
   "No records found": "Nenhum registro encontrado",
   "Actions": "Ações",
   "People": "Pessoas",
