--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -225,6 +225,8 @@
   "Are you sure you want to enable this account?": "Tem certeza de que deseja ativar esta conta?",
   "No records found": "Nenhum registro encontrado",
   "Actions": "Ações",
+  "Active": "Ativo",
+  "Inactive": "Inativo",
   "People": "Pessoas",
   "people": "pessoas",
   "with": "com",
