--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -227,6 +227,7 @@
   "Actions": "Ações",
   "Active": "Ativo",
   "Inactive": "Inativo",
+  "Select": "Selecione",
   "People": "Pessoas",
   "people": "pessoas",
   "with": "com",
