--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -213,12 +213,19 @@
   "New Employee": "Novo Funcionário",
   "Employee Created": "Funcionário Criado",
   "Employee Deleted": "Funcionário Excluído",
+  "Showing Employee": "Mostrando Funcionário",
+  "Dismissing Employee": "Demitindo Funcionário",
+  "Retaining Employee": "Retendo Funcionário",
   "Employee updated successfully": "Funcionário atualizado com sucesso",
   "Employee created successfully": "Funcionário criado com sucesso",
   "Employee deleted successfully": "Funcionário excluído com sucesso",
   "Salary": "Salário",
+  "Retain": "Reter",
+  "Dismiss": "Demitir",
   "Spouse": "Cônjuge",
   "Issue": "Emitir",
+  "Hiring Date": "Data de Contratação",
+  "Resignation Date": "Data de Demissão",
   "Account desactive. Please contact the administrator.": "Conta desativada. Por favor, entre em contato com o administrador.",
 
   "Are you sure you want to disable this account?": "Tem certeza de que deseja desativar esta conta?",
