MM-32-fix-2: Change input field for money field and translate

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -27,6 +27,7 @@
   "New Vehicle Model": "Novo Modelo de Veículo",
   "Vehicle Model Created": "Modelo de Veículo Criado",
   "Vehicle Model Deleted": "Modelo de Veículo Excluído",
+  "Vehicle updated successfully": "Veículo atualizado com sucesso",
 
   "Vehicle Types": "Tipos de Veículos",
   "Vehicle Type": "Tipo de Veículo",
