MM-32-fix-2: Vehicle Expense changed

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -5,6 +5,7 @@
   "Update": "Atualizar",
   "About": "Sobre",
   "Store": "Loja",
+  "Create a Expense": "Criar uma Despesa",
 
   "Brands": "Marcas",
   "brand": "Marca",
