--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -6,6 +6,9 @@
   "About": "Sobre",
   "Store": "Loja",
   "Create a Expense": "Criar uma Despesa",
+  "Installments Paid": "Parcelas Pagas",
+  "Value of Installments Paid": "Valor das Parcelas Pagas",
+  "Total Received": "Total Recebido",
 
   "Brands": "Marcas",
   "brand": "Marca",
