MM-32-fix-2: wip

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -9,6 +9,7 @@
   "Installments Paid": "Parcelas Pagas",
   "Value of Installments Paid": "Valor das Parcelas Pagas",
   "Total Received": "Total Recebido",
+  "Create Employee": "Criar Funcionário",
 
   "Brands": "Marcas",
   "brand": "Marca",
