MM-32-fix-2: wip

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -10,6 +10,11 @@
   "Value of Installments Paid": "Valor das Parcelas Pagas",
   "Total Received": "Total Recebido",
   "Create Employee": "Criar Funcionário",
+  "Mother Phone": "Telefone da Mãe",
+  "Father Phone": "Telefone do Pai",
+  "Affiliated Phone": "Telefone do Afiliado",
+  "Affiliated Phone (1)": "Telefone do Afiliado (1)",
+  "Affiliated Phone (2)": "Telefone do Afiliado (2)",
 
   "Brands": "Marcas",
   "brand": "Marca",
