MM-32-fix-2: add  in vehicle steering, transmission, doors, seats and traction

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -15,6 +15,12 @@
   "Affiliated Phone": "Telefone do Afiliado",
   "Affiliated Phone (1)": "Telefone do Afiliado (1)",
   "Affiliated Phone (2)": "Telefone do Afiliado (2)",
+  "Engine Power": "Potência do Motor",
+  "Steering": "Direção",
+  "Traction": "Tração",
+  "Doors": "Portas",
+  "Seats": "Assentos",
+  "Transmission": "Transmissão",
 
   "Brands": "Marcas",
   "brand": "Marca",
