--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -21,6 +21,7 @@
   "Doors": "Portas",
   "Seats": "Assentos",
   "Transmission": "Transmissão",
+  "Gender": "Gênero",
 
   "Brands": "Marcas",
   "brand": "Marca",
