--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -22,6 +22,7 @@
   "Seats": "Assentos",
   "Transmission": "Transmissão",
   "Gender": "Gênero",
+  "Clean Filters": "Limpar Filtros",
 
   "Brands": "Marcas",
   "brand": "Marca",
