--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -32,6 +32,7 @@
   "Pay date before": "Data de pagamento antes",
   "Due date after": "Data de vencimento após",
   "Due date before": "Data de vencimento antes",
+  "Overdue Payments": "Pagamentos em atraso",
 
   "Brands": "Marcas",
   "brand": "Marca",
