--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -33,6 +33,7 @@
   "Due date after": "Data de vencimento após",
   "Due date before": "Data de vencimento antes",
   "Overdue Payments": "Pagamentos em atraso",
+  "Ability Updated": "Habilidade Atualizada",
 
   "Brands": "Marcas",
   "brand": "Marca",
