--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -34,6 +34,15 @@
   "Due date before": "Data de vencimento antes",
   "Overdue Payments": "Pagamentos em atraso",
   "Ability Updated": "Habilidade Atualizada",
+  "vexpense_create": "Criar Despesa",
+  "vexpense_read": "Ver Despesa",
+  "vexpense_update": "Atualizar Despesa",
+  "vexpense_delete": "Apagar Despesa",
+  "employee_create": "Criar Funcionário",
+  "employee_read": "Ver Funcionário",
+  "employee_update": "Atualizar Funcionário",
+  "employee_delete": "Apagar Funcionário",
+  "ephoto_delete": "Apagar Foto do Funcionário",
 
   "Brands": "Marcas",
   "brand": "Marca",
