--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -45,6 +45,8 @@
   "ephoto_delete": "Apagar Foto do Funcionário",
   "Ability Added": "Habilidade Adicionada",
   "Ability Removed": "Habilidade Removida",
+  "Expense date after": "Data da despesa após",
+  "Expense date before": "Data da despesa antes",
 
   "Brands": "Marcas",
   "brand": "Marca",
