--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -42,11 +42,15 @@
   "employee_read": "Ver Funcionário",
   "employee_update": "Atualizar Funcionário",
   "employee_delete": "Apagar Funcionário",
-  "ephoto_delete": "Apagar Foto do Funcionário",
+  "employee_photo_delete": "Apagar Foto do Funcionário",
   "Ability Added": "Habilidade Adicionada",
   "Ability Removed": "Habilidade Removida",
   "Expense date after": "Data da despesa após",
   "Expense date before": "Data da despesa antes",
+  "Activate": "Ativar",
+  "User activated": "Usuário ativado",
+  "Deactivate": "Desativar",
+  "User deactivated": "Usuário desativado",
 
   "Brands": "Marcas",
   "brand": "Marca",
@@ -492,24 +496,24 @@
   "group_read": "Ver Grupo",
   "group_update": "Atualizar Grupo",
   "group_delete": "Apagar Grupo",
-  "vmodel_create": "Criar Modelo de Veículo",
-  "vmodel_read": "Ver Modelo de Veículo",
-  "vmodel_update": "Atualizar Modelo de Veículo",
-  "vmodel_delete": "Apagar Modelo de Veículo",
-  "vtype_create": "Criar Tipo de Veículo",
-  "vtype_read": "Ver Tipo de Veículo",
-  "vtype_update": "Atualizar Tipo de Veículo",
-  "vtype_delete": "Apagar Tipo de Veículo",
+  "vehicle_model_create": "Criar Modelo de Veículo",
+  "vehicle_model_read": "Ver Modelo de Veículo",
+  "vehicle_model_update": "Atualizar Modelo de Veículo",
+  "vehicle_model_delete": "Apagar Modelo de Veículo",
+  "vehicle_type_create": "Criar Tipo de Veículo",
+  "vehicle_type_read": "Ver Tipo de Veículo",
+  "vehicle_type_update": "Atualizar Tipo de Veículo",
+  "vehicle_type_delete": "Apagar Tipo de Veículo",
   "vehicle_create": "Criar Veículo",
   "vehicle_read": "Ver Veículo",
   "vehicle_update": "Atualizar Veículo",
   "vehicle_delete": "Apagar Veículo",
-  "vphoto_delete": "Apagar Foto do Veículo",
+  "vehicle_photo_delete": "Apagar Foto do Veículo",
   "client_create": "Criar Cliente",
   "client_read": "Ver Cliente",
   "client_update": "Atualizar Cliente",
   "client_delete": "Apagar Cliente",
-  "cphoto_delete": "Apagar Foto do Cliente",
+  "client_photo_delete": "Apagar Foto do Cliente",
   "sale_create": "Criar Venda",
   "sale_read": "Ver Venda",
   "sale_cancel": "Cancelar Venda",
@@ -525,10 +529,10 @@
   "city_update": "Atualizar Cidade",
   "city_delete": "Apagar Cidade",
   "company_update": "Atualizar Empresa",
-  "expense_create": "Criar Despesa",
-  "expense_read": "Ver Despesa",
-  "expense_update": "Atualizar Despesa",
-  "expense_delete": "Apagar Despesa",
+  "vehicle_expense_create": "Criar Despesa",
+  "vehicle_expense_read": "Ver Despesa",
+  "vehicle_expense_update": "Atualizar Despesa",
+  "vehicle_expense_delete": "Apagar Despesa",
 
   "Edit Role": "Editar Função",
   "User Created": "Usuário Criado",
