MM-33: UserTable ordered

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -51,6 +51,7 @@
   "User activated": "Usuário ativado",
   "Deactivate": "Desativar",
   "User deactivated": "Usuário desativado",
+  "User created successfully": "Usuário criado com sucesso",
 
   "Brands": "Marcas",
   "brand": "Marca",
