--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -52,6 +52,8 @@
   "Deactivate": "Desativar",
   "User deactivated": "Usuário desativado",
   "User created successfully": "Usuário criado com sucesso",
+  "Expense updated successfully": "Despesa atualizada com sucesso",
+  "Expense created successfully": "Despesa criada com sucesso",
 
   "Brands": "Marcas",
   "brand": "Marca",
