--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -58,6 +58,8 @@
   "Select a Type": "Selecione um Tipo",
   "Vehicle model created successfully": "Modelo de veículo criado com sucesso",
   "Vehicle model updated successfully": "Modelo de veículo atualizado com sucesso",
+  "City created successfully": "Cidade criada com sucesso",
+  "City updated successfully": "Cidade atualizada com sucesso",
 
   "Brands": "Marcas",
   "brand": "Marca",
