--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -145,6 +145,8 @@
   "New Client": "Novo Cliente",
   "Client Created": "Cliente Criado",
   "Client Deleted": "Cliente Excluído",
+  "Fipe Price": "Preço Fipe",
+  "Promotional Price": "Preço Promocional",
 
   "Showing Client": "Mostrando Cliente",
   "Phone": "Telefone",
