MM-30: add employee is the ceo, finished

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -147,6 +147,7 @@
   "Client Deleted": "Cliente Excluído",
   "Fipe Price": "Preço Fipe",
   "Promotional Price": "Preço Promocional",
+  "Employee is the CEO, it is not possible to delete him, determine another CEO and try again": "Funcionário é o CEO, não é possível excluí-lo, determine outro CEO e tente novamente",
 
   "Showing Client": "Mostrando Cliente",
   "Phone": "Telefone",
