--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -172,6 +172,7 @@
   "Vehicle type updated successfully": "Tipo de veículo atualizado com sucesso",
   "Retained Employee": "Funcionário Retido",
   "Dismissed Employee": "Funcionário Demitido",
+  "Annotation": "Anotação",
 
   "Showing Client": "Mostrando Cliente",
   "Phone": "Telefone",
