MM-37: sale.show implemented

--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -173,6 +173,13 @@
   "Retained Employee": "Funcionário Retido",
   "Dismissed Employee": "Funcionário Demitido",
   "Annotation": "Anotação",
+  "Sold Price": "Preço Vendido",
+  "More information": "Mais informações",
+  "Next installment day": "Próximo dia de parcela",
+  "Amount of installments": "Quantidade de parcelas",
+  "Installment value": "Valor da parcela",
+  "Amount paid": "Valor pago",
+  "Amount remaining": "Valor restante",
 
   "Showing Client": "Mostrando Cliente",
   "Phone": "Telefone",
