--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -180,6 +180,9 @@
   "Installment value": "Valor da parcela",
   "Amount paid": "Valor pago",
   "Amount remaining": "Valor restante",
+  "Sale canceled successfully": "Venda cancelada com sucesso",
+  "Attention": "Atenção",
+  "This sale has been canceled/reembursed": "Esta venda foi cancelada/reembolsada",
 
   "Showing Client": "Mostrando Cliente",
   "Phone": "Telefone",
