--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -183,6 +183,8 @@
   "Sale canceled successfully": "Venda cancelada com sucesso",
   "Attention": "Atenção",
   "This sale has been canceled/reembursed": "Esta venda foi cancelada/reembolsada",
+  "Issue Contract": "Emitir Contrato",
+  "Select a CEO": "Selecione um CEO",
 
   "Showing Client": "Mostrando Cliente",
   "Phone": "Telefone",
