--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -64,6 +64,7 @@
   "Select a hierarchy level": "Selecione um nível de hierarquia",
   "User created successfully": "Usuário criado com sucesso",
   "User updated successfully": "Usuário atualizado com sucesso",
+  "Filter": "Filtrar",
 
   "Brands": "Marcas",
   "brand": "Marca",
