--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -65,6 +65,7 @@
   "User created successfully": "Usuário criado com sucesso",
   "User updated successfully": "Usuário atualizado com sucesso",
   "Filter": "Filtrar",
+  "Sale Details": "Detalhes da Venda",
 
   "Brands": "Marcas",
   "brand": "Marca",
