--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -187,6 +187,7 @@
   "This sale has been canceled/reembursed": "Esta venda foi cancelada/reembolsada",
   "Issue Contract": "Emitir Contrato",
   "Select a CEO": "Selecione um CEO",
+  "Financial": "Financeiro",
 
   "Showing Client": "Mostrando Cliente",
   "Phone": "Telefone",
